--- a/index.css
+++ b/index.css
@@ -1,1 +1,10 @@
-Canvas{background:url(./img/background.png)} 
+Canvas{
+	background:url(./img/background.png);
+	outline: none;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+} ;
